@@ -7,16 +7,19 @@ t/badly-folded.t
 t/basic.t
 t/folding.t
 t/header-case.t
+t/header-junk.t
 t/long-msgid.t
 t/many-repeats.t
 t/no-body.t
 t/pod-coverage.t
 t/pod.t
 t/test-mails/badly-folded
+t/test-mails/badly-folded-noindent
 t/test-mails/josey-fold
 t/test-mails/josey-nobody
+t/test-mails/josey-nobody-blank
 t/test-mails/josey-nofold
+t/test-mails/junk-in-header
 t/test-mails/long-msgid
 t/test-mails/many-repeats
 t/unit.t
-META.yml                                Module meta-data (added by MakeMaker)
