@@ -1,0 +1,19 @@
+Received: (qmail 1679 invoked by uid 503); 13 Nov 2002 10:10:49 -0000
+Resent-Date: 13 Nov 2002 10:10:49 -0000
+Date: Wed, 13 Nov 2002 10:06:51 GMT
+From: Andrew Josey <ajosey@rdg.opengroup.org>
+Message-Id: <1021113100650.ZM12997@skye.rdg.opengroup.org>
+In-Reply-To: Joanna Farley's message as of Nov 13,  9:56am.
+X-Mailer: Z-Mail (5.0.0 30July97)
+To: austin-group-l@opengroup.org
+Subject: Re: Defect in XBD lround
+MIME-Version: 1.0
+Resent-Message-ID: <gZGK1B.A.uY.iUi09@mailman>
+Resent-To: austin-group-l@opengroup.org
+Resent-From: austin-group-l@opengroup.org
+X-Mailing-List: austin-group-l:archive/latest/4823
+X-Loop: austin-group-l@opengroup.org
+Precedence: list
+Resent-Sender: austin-group-l-request@opengroup.org
+Content-Type: text/plain; charset=us-ascii
+
