@@ -3,6 +3,7 @@ Revision history for Perl extension Email::Simple.
 1.96    2006-07-25
 
   - output headers in predictable order
+  - give tests more meaningful names
 
 1.95    2006-07-21
 
